# egile-agent-hub

./: .env.example  .gitignore  CREATING_PLUGINS.md  IMPLEMENTATION_SUMMARY.md  INVESTMENT_REPORTER_INTEGRATION.md  LICENSE  MEMORY_FIX_SUMMARY.md  MEMORY_SOLUTION.md  PLUGIN_DISCOVERY.md  QUICKSTART.md  QUICK_START_MEMORY.md  README.md  SLIDEDECK_INTEGRATION.md  agents.yaml.example  install.bat  install.sh  pyproject.toml  start.bat  start.sh
src/egile_agent_hub/: __init__.py  config.py  plugin_loader.py  run_server.py
